<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/matches_menu"
            android:orderInCategory="100"
            android:title="@string/matches"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/teams_menu"
            android:orderInCategory="100"
            android:title="@string/teams"
            android:icon="@android:drawable/ic_menu_today"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/fav_menu"
            android:orderInCategory="100"
            android:title="@string/fav"
            android:icon="@drawable/ic_add_to_favorites"
            app:showAsAction="ifRoom"/>
</menu>